ignore renv directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,8 @@
 .Rproj.user
 **.Rhistory
-**.RData
 **.Rdata
-**.Ruserdata
-**.rdb
-**.rdx
-**.glo
-**.ist
-**.out
-**.nav
-**.log
-**.bbl
-**.blg
-**.aux
-**.toc
-**.snm
+_targets
+renv
 outputs
 logs
-reports
-datasets
-old
-tools
-ref
+core
