--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+cached-property==1.5.2
+click==8.1.2
+Cython==0.29.28
+h5py==3.6.0
+importlib-metadata==4.11.3
 MACS2==2.2.7.1
 numpy==1.21.5
-pkg-resources==0.0.0
+pkg_resources==0.0.0
+pysam==0.19.0
+scipy==1.7.3
+typing_extensions==4.1.1
+zipp==3.8.0
