--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,43 @@
+anndata==0.8.0
 cached-property==1.5.2
 click==8.1.2
+cycler==0.11.0
 Cython==0.29.28
+fonttools==4.31.2
 h5py==3.6.0
 importlib-metadata==4.11.3
-MACS2==2.2.7.1
+joblib==1.1.0
+kiwisolver==1.4.2
+llvmlite==0.35.0
+loompy==3.0.7
+matplotlib==3.5.1
+natsort==8.1.0
+networkx==2.6.3
+numba==0.52.0
 numpy==1.21.5
+numpy-groupies==0.9.14
+packaging==21.3
+pandas==1.3.5
+patsy==0.5.2
+Pillow==9.1.0
 pkg_resources==0.0.0
+pynndescent==0.5.6
+pyparsing==3.0.7
 pysam==0.19.0
+python-dateutil==2.8.2
+pytz==2022.1
+scanpy==1.9.1
+scikit-learn==1.0.2
 scipy==1.7.3
+scvelo==0.2.4
+seaborn==0.11.2
+session-info==1.0.0
+six==1.16.0
+statsmodels==0.13.2
+stdlib-list==0.8.0
+threadpoolctl==3.1.0
+tqdm==4.64.0
 typing_extensions==4.1.1
+umap-learn==0.5.2
+velocyto==0.17.17
 zipp==3.8.0
